--- a/package.json
+++ b/package.json
@@ -39,6 +39,27 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tiptap/extension-blockquote": "^2.23.1",
+    "@tiptap/extension-bold": "^2.23.1",
+    "@tiptap/extension-bullet-list": "^2.23.1",
+    "@tiptap/extension-character-count": "^2.23.1",
+    "@tiptap/extension-code": "^2.23.1",
+    "@tiptap/extension-color": "^2.23.1",
+    "@tiptap/extension-heading": "^2.23.1",
+    "@tiptap/extension-horizontal-rule": "^2.23.1",
+    "@tiptap/extension-image": "^2.23.1",
+    "@tiptap/extension-italic": "^2.23.1",
+    "@tiptap/extension-link": "^2.23.1",
+    "@tiptap/extension-list-item": "^2.23.1",
+    "@tiptap/extension-ordered-list": "^2.23.1",
+    "@tiptap/extension-placeholder": "^2.23.1",
+    "@tiptap/extension-strike": "^2.23.1",
+    "@tiptap/extension-text-align": "^2.23.1",
+    "@tiptap/extension-text-style": "^2.23.1",
+    "@tiptap/extension-underline": "^2.23.1",
+    "@tiptap/react": "^2.23.1",
+    "@tiptap/starter-kit": "^2.23.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -48,6 +69,7 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "multer": "^2.0.1",
     "next": "15.2.4",
     "next-auth": "latest",
     "next-themes": "^0.4.4",
@@ -58,9 +80,11 @@
     "react-hook-form": "^7.54.1",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.7",
+    "react-toastify": "^11.0.5",
     "recharts": "2.15.0",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
+    "sharp": "^0.34.2",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
