--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@tailwindcss/typography": "^0.5.16",
+    "@tiptap/core": "^2.24.1",
     "@tiptap/extension-blockquote": "^2.23.1",
     "@tiptap/extension-bold": "^2.23.1",
     "@tiptap/extension-bullet-list": "^2.23.1",
